Fixed #13 - Fix footer width on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ iframe {max-width: 100%; }
 }
 
 footer {
-  padding: 20px 25%;
+  padding: 20px 4%;
   background-color: rgba(52, 73, 94, 0.95);
   color: rgba(255,255,255, 0.8);
   text-align: center;
